--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -1,8 +1,13 @@
 <mat-card>
-    <form>
-        <mat-form-field>
-        <input matInput placeholder="Question">
-        </mat-form-field>
-    </form>
+    <mat-card-content>
+        <form>
+            <mat-form-field>
+            <input [(ngModel)]="question" name="question" matInput placeholder="Question">
+            </mat-form-field>
+        </form>
+    </mat-card-content>
+    <mat-card-actions>
+        <button (click)="post(question)" mat-button>POST</button>
+    </mat-card-actions>
 </mat-card>
   
